load("@rules_foreign_cc//tools/build_defs:configure.bzl", "configure_make")

configure_make(
    name = "gperftools_build",
    configure_options = [
        "--enable-shared=no",
        "--enable-frame-pointers",
        "--disable-libunwind",
        "AR=/usr/bin/ar",
    ],
    lib_source = "@com_github_gperftools_gperftools//:all",
    linkopts = ["-lpthread"],
    make_commands = ["make -j12 install-libLTLIBRARIES install-perftoolsincludeHEADERS"],
    static_libraries = [
      "libtcmalloc_and_profiler.a",
    ],
)

# Workaround for https://github.com/bazelbuild/rules_foreign_cc/issues/227
cc_library(
    name = "gperftools",
    deps = [
      ":gperftools_build",
    ],
    visibility = ["//visibility:public"],
)
